--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -433,8 +433,7 @@ best achieved &#8710;f
 for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,...
 function evaluations
 (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
-where &#8710;f&nbsp;and <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. Light brown lines in the background show ECDFs for the most difficult target of all
-algorithms benchmarked during BBOB-2009.
+where &#8710;f&nbsp;and <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value.
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendtwolargescalefixed##
