--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -27,14 +27,9 @@
  
 <title>No Title</title>
 
-##bbobECDFslegendrlbased5##
+##bbobECDFslegendrlbased##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in 5-D. The targets are chosen from BBOBPPFIGSTARGETRANGE such that the REFERENCEALGORITHM artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
-
-<div class="p"><!----></div>
-##bbobECDFslegendrlbased20##
-
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in 20-D. The targets are chosen from BBOBPPFIGSTARGETRANGE such that the REFERENCEALGORITHM artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for all functions and subgroups in DIMVALUE-D. The targets are chosen from BBOBPPFIGSTARGETRANGE such that the REFERENCEALGORITHM artificial algorithm just not reached them within a given budget of k &times; DIM, with k &#8712; {0.5, 1.2, 3, 10, 50}. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendrlbased##
@@ -153,7 +148,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction of 48. A &#8595; indicates the same tested against the best
-        algorithm of BBOB-2009.Best results are printed in bold.
+        algorithm of BBOB-2009. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -198,14 +193,9 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         is the geometric mean.
 
 <div class="p"><!----></div>
-##bbobECDFslegendfixed5##
+##bbobECDFslegendfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 5-D. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
-
-<div class="p"><!----></div>
-##bbobECDFslegendfixed20##
-
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 20-D. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in DIMVALUE-D. The "best 2009" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2009 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendfixed##
@@ -324,7 +314,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction of 48. A &#8595; indicates the same tested against the best
-        algorithm of BBOB-2009.Best results are printed in bold.
+        algorithm of BBOB-2009. Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -366,14 +356,9 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         is the geometric mean.
 
 <div class="p"><!----></div>
-##bbobECDFslegendbiobjfixed5##
+##bbobECDFslegendbiobjfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 5-D. 
-
-<div class="p"><!----></div>
-##bbobECDFslegendbiobjfixed20##
-
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 20-D. 
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in DIMVALUE-D. 
 
 <div class="p"><!----></div>
 ##bbobppfigslegendbiobjfixed##
@@ -529,5 +514,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 03 Jun 2016, 17:06.</small>
+version 4.08.<br />On 08 Jun 2016, 11:37.</small>
 </html>
