--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -356,14 +356,9 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         is the geometric mean.
 
 <div class="p"><!----></div>
-##bbobECDFslegendlargescalefixed80##
+##bbobECDFslegendlargescalefixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 80-D.
-
-<div class="p"><!----></div>
-##bbobECDFslegendlargescalefixed320##
-
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in 320-D.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in DIMVALUE-D.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendlargescalefixed##
@@ -453,29 +448,10 @@ with p=0.05 or p=10<sup>&#8722;k</sup> where k &#8712; {2,3,4,...} is the number
 following the &#8727; symbol, with Bonferroni correction of 48.
 
 <div class="p"><!----></div>
-##bbobpptablesmanylegendlargescalefixed80##
+##bbobpptablesmanylegendlargescalefixed##
 
 Average running time (<span class="roman">aRT</span>&nbsp;in number of function
-evaluations)  in
-dimension 80.
-The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between
-10 and 90%-tile of bootstrapped run lengths appear for each algorithm and
-target, the corresponding best <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row.
-#succ is the number of trials that reached the (final) target
-f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.
-The median number of conducted function evaluations is additionally given in
-<i>italics</i>, if the target in the last column was never reached.
-Entries, succeeded by a star, are statistically significantly better (according to
-the rank-sum test) when compared to all other algorithms of the table, with
-p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-than 1, with Bonferroni correction of 48.
-
-<div class="p"><!----></div>
-##bbobpptablesmanylegendlargescalefixed320##
-
-Average running time (<span class="roman">aRT</span>&nbsp;in number of function
-evaluations) in
-dimension 320.
+evaluations) in different dimensions.
 The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference between
 10 and 90%-tile of bootstrapped run lengths appear for each algorithm and
 target, the corresponding best <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row.
