updated html captions to pass the verify-postprocessing test

--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -360,7 +360,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 <div class="p"><!----></div>
 ##bbobECDFslegendbiobjfixed##
 
-Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in DIMVALUE-D. As reference algorithm, "" is shown as light thick line with diamond markers.
+Bootstrapped empirical cumulative distribution of the number of objective function evaluations divided by dimension (FEvals/DIM) for BBOBPPFIGSFTARGET targets with target precision in BBOBPPFIGSTARGETRANGE for all functions and subgroups in DIMVALUE-D. The "best 2016" line corresponds to the best <span class="roman">aRT</span>&nbsp;observed during BBOB 2016 for each selected target.
 
 <div class="p"><!----></div>
 ##bbobppfigslegendbiobjfixed##
@@ -438,14 +438,12 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 <div class="p"><!----></div>
 ##bbobpptablestwolegendbiobjfixed##
 
-        Average runtime (<span class="roman">aRT</span>) to reach given targets, measured
-        in number of function evaluations in dimensions 5 (left) and 20 (right).
-        For each function, the <span class="roman">aRT</span>&nbsp;
-        and, in braces as dispersion measure, the half difference between 10 and 
-        90%-tile of (bootstrapped) runtimes is shown for the different
-        target &#8710;f-values as shown in the top row. 
-        #succ is the number of trials that reached the last target    
-        I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.
+        Average running time (<span class="roman">aRT</span>&nbsp;in number of function evaluations) divided
+        by the respective best <span class="roman">aRT</span>&nbsp;measured during BBOB 2016 in dimensions 5 (left)
+        and 20 (right).
+        The <span class="roman">aRT</span>&nbsp;and in braces, as dispersion measure, the half difference
+        between 10 and 90%-tile of bootstrapped run lengths appear for each
+        algorithm and 
                 target, the corresponding best <span class="roman">aRT</span>&nbsp;        in the first row. The different target &#8710;f-values are shown in the top row. 
         #succ is the number of trials that reached the (final) target
         f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;5</sup>.
@@ -454,7 +452,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         1:algorithmAshort&nbsp;is algorithmA&nbsp;and 2:algorithmBshort&nbsp;is algorithmB.
         Bold entries are statistically significantly better compared to the other algorithm,
         with p=0.05 or p=10<sup>&#8722;k</sup> where k &#8712; {2,3,4,...} is the number
-        following the &#8727; symbol, with Bonferroni correction of 48.
+        following the &#8727; symbol, with Bonferroni correction of 48.        A &#8595; indicates the same tested against
+        the best algorithm of BBOB 2016.
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed##
@@ -519,5 +518,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 06 Aug 2016, 18:20.</small>
+version 4.08.<br />On 23 Aug 2016, 16:48.</small>
 </html>
