updated HTML captions after verify-postprocessing complained

--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -175,10 +175,10 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         as the best target f-value reached within the
         budget by the given algorithm.
         Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
-        or the budget, if the GECCO-BBOB-2009 best algorithm
+        or the budget, if the best algorithm from BBOB-2009
         reached a better target within the budget,
-        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
-        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        divided by the best <span class="roman">aRT</span>&nbsp;seen in BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
+                Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
@@ -188,6 +188,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 ##bbobloglossfigurecaptionrlbased##
 
         <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+
+<div class="p"><!----></div>
         Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
         is the geometric mean.
 
@@ -339,10 +341,10 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         as the best target f-value reached within the
         budget by the given algorithm.
         Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
-        or the budget, if the GECCO-BBOB-2009 best algorithm
+        or the budget, if the best algorithm from BBOB-2009
         reached a better target within the budget,
-        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
-        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        divided by the best <span class="roman">aRT</span>&nbsp;seen in BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
+                Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
@@ -352,6 +354,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 ##bbobloglossfigurecaptionfixed##
 
         <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+
+<div class="p"><!----></div>
         Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
         is the geometric mean.
 
@@ -493,13 +497,13 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         <span class="roman">aRT</span>&nbsp;loss ratio versus the budget in number of f-evaluations
         divided by dimension.
         For each given budget <span class="roman">FEvals</span>, the target value f<sub><span class="roman">t</span></sub>&nbsp;is computed
-        as the best target f-value reached within the
+        as the best target I<sub><span class="roman">H</span>V</sub><sup><span class="roman">C</span>OCO</sup>-value reached within the
         budget by the given algorithm.
         Shown is then the <span class="roman">aRT</span>&nbsp;to reach f<sub><span class="roman">t</span></sub>&nbsp;for the given algorithm
-        or the budget, if the GECCO-BBOB-2009 best algorithm
+        or the budget, if the best algorithm from BBOB-2016
         reached a better target within the budget,
-        divided by the best <span class="roman">aRT</span>&nbsp;        seen in GECCO-BBOB-2009 to reach f<sub><span class="roman">t</span></sub>.
-        Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
+        divided by the best <span class="roman">aRT</span>&nbsp;seen in BBOB-2016 to reach f<sub><span class="roman">t</span></sub>.
+                Line: geometric mean. Box-Whisker error bar: 25-75%-ile with median
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
@@ -509,6 +513,8 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 ##bbobloglossfigurecaptionbiobjfixed##
 
         <span class="roman">aRT</span>&nbsp;loss ratios (see the previous figure for details).
+
+<div class="p"><!----></div>
         Each cross (<span style="color:#0000FF">+</span>) represents a single function, the line
         is the geometric mean.
 
@@ -519,5 +525,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 24 Aug 2016, 14:34.</small>
+version 4.08.<br />On 13 Sep 2016, 11:34.</small>
 </html>
