solved one bug in doctest of pproc.py, updated html captions to verify postprocessing again

--- a/code-postprocessing/bbob_pproc/latex_commands_for_html.html
+++ b/code-postprocessing/bbob_pproc/latex_commands_for_html.html
@@ -44,7 +44,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
          trials with an outcome not larger than the respective value on the x-axis.
-                  Left subplots: ECDF of number of function evaluations (FEvals) divided by search space dimension,
+                  Left subplots: ECDF of number of function evaluations (FEvals) divided by search space dimension D,
          to fall below f<sub><span class="roman">opt</span></sub>+&#8710;f where &#8710;f is the
          target just not reached by the best algorithm from BBOB 2009 within a budget of
          k&times;<span class="roman">DIM</span> evaluations, where k is the first value in the legend.          Legends indicate for each target the number of functions that were solved in at
@@ -209,7 +209,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
          trials with an outcome not larger than the respective value on the x-axis.
-                  Left subplots: ECDF of the number of function evaluations (FEvals) divided by search space dimension,
+                  Left subplots: ECDF of the number of function evaluations (FEvals) divided by search space dimension D,
          to fall below f<sub><span class="roman">opt</span></sub>+&#8710;f with &#8710;f
 =10<sup>k</sup>, where k is the first value in the legend.
          The thick red line represents the most difficult target value f<sub><span class="roman">opt</span></sub>+ 10<sup>&#8722;8</sup>.          Legends indicate for each target the number of functions that were solved in at
@@ -374,7 +374,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
 
          Empirical cumulative distribution functions (ECDF), plotting the fraction of
          trials with an outcome not larger than the respective value on the x-axis.
-                  Left subplots: ECDF of the number of function evaluations (FEvals) divided by search space dimension,
+                  Left subplots: ECDF of the number of function evaluations (FEvals) divided by search space dimension D,
          to fall below I<sup><span class="roman">ref</span></sup>+&#8710;I with &#8710;I
 =10<sup>k</sup>, where k is the first value in the legend.
          The thick red line represents the most difficult target value I<sup><span class="roman">ref</span></sup>+ 10<sup>&#8722;5</sup>.          Legends indicate for each target the number of functions that were solved in at
@@ -525,5 +525,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 05 Oct 2016, 17:52.</small>
+version 4.08.<br />On 05 Oct 2016, 23:41.</small>
 </html>
