addressed the "Hash in (`bbob-biobj`) tables" issue (#1241), using python-3-type print function in `pproc.py`, update of LaTeX templates (made single-objective ones work again, added updated deadlines)

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -109,7 +109,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions.
+        functions.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablestwolegendrlbased##
@@ -128,7 +128,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Bold entries are statistically significantly better compared to the other algorithm,
         with p=0.05 or p=10<sup>&#8722;k</sup> where k &#8712; {2,3,4,...} is the number
         following the &#8727; symbol, with Bonferroni correction of 48.        A &#8595; indicates the same tested against
-        the best algorithm of BBOB 2009.
+        the best algorithm of BBOB 2009.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased##
@@ -147,6 +147,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction of 48. A &#8595; indicates the same tested against the best
         algorithm of BBOB-2009. Best results are printed in bold.
+        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -181,7 +182,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.
+        the following figure for results on each function subgroup.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionrlbased##
@@ -275,7 +276,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) compared to the best algorithm from BBOB 2009, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions.
+        functions.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablestwolegendfixed##
@@ -295,7 +296,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Bold entries are statistically significantly better compared to the other algorithm,
         with p=0.05 or p=10<sup>&#8722;k</sup> where k &#8712; {2,3,4,...} is the number
         following the &#8727; symbol, with Bonferroni correction of 48.        A &#8595; indicates the same tested against
-        the best algorithm of BBOB 2009.
+        the best algorithm of BBOB 2009.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed##
@@ -315,6 +316,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction of 48. A &#8595; indicates the same tested against the best
         algorithm of BBOB-2009. Best results are printed in bold.
+        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -346,7 +348,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.
+        the following figure for results on each function subgroup.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionfixed##
@@ -438,7 +440,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) compared to the best algorithm from BBOB 2016, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k  &gt;  1 is following the
         &#8595; symbol, with Bonferroni correction by the number of
-        functions.
+        functions.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablestwolegendbiobjfixed##
@@ -458,7 +460,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         Bold entries are statistically significantly better compared to the other algorithm,
         with p=0.05 or p=10<sup>&#8722;k</sup> where k &#8712; {2,3,4,...} is the number
         following the &#8727; symbol, with Bonferroni correction of 48.        A &#8595; indicates the same tested against
-        the best algorithm of BBOB 2016.
+        the best algorithm of BBOB 2016.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed##
@@ -476,6 +478,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in number of f-evaluat
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
         than 1, with Bonferroni correction of 110. Best results are printed in bold.
+        ??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -507,7 +510,7 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
         (box), 10-90%-ile (caps), and minimum and maximum <span class="roman">aRT</span>&nbsp;loss ratio
         (points). The vertical line gives the maximal number of function evaluations
         in a single trial in this function subset. See also
-        the following figure for results on each function subgroup.
+        the following figure for results on each function subgroup.??COCOVERSION??
 
 <div class="p"><!----></div>
 ##bbobloglossfigurecaptionbiobjfixed##
@@ -525,5 +528,5 @@ Average running time (<span class="roman">aRT</span>&nbsp;in log<sub>10</sub> of
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 02 Dec 2016, 15:14.</small>
+version 4.08.<br />On 15 Dec 2016, 16:51.</small>
 </html>
